Prevent floating scrollbar in IE

--- a/client/assets/styles/app.scss
+++ b/client/assets/styles/app.scss
@@ -159,9 +159,8 @@ input[type="search"]::-webkit-search-cancel-button {
 }
 
 // Layout
-html,
-body {
-  height: 100%;
+html {
+  -ms-overflow-style: scrollbar;
 }
 
 .layout {
